// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpandableSection snapshot > matches snapshot when expansion is disabled 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot when initially collapsed 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot when initially expanded 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region css-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
            >
              <div
                class="MuiStack-root css-t7rxh2-MuiStack-root"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-hmhetd-MuiDivider-root"
                />
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Section Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot with default props 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot with expanded end divider 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region css-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
            >
              <div
                class="MuiStack-root css-t7rxh2-MuiStack-root"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-hmhetd-MuiDivider-root"
                />
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Section Content
                </p>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-hmhetd-MuiDivider-root"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot with multiple children 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-c8su3g-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region css-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
            >
              <div
                class="MuiStack-root css-t7rxh2-MuiStack-root"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-hmhetd-MuiDivider-root"
                />
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Child One
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Child Two
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Child Three
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableSection snapshot > matches snapshot without expand icon 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-17b01ac-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
  >
    <div
      class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-cridkk-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded css-18x5eyn-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
          >
            Section Title
          </p>
        </span>
      </button>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region css-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
            >
              <div
                class="MuiStack-root css-t7rxh2-MuiStack-root"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-hmhetd-MuiDivider-root"
                />
                <p
                  class="MuiTypography-root MuiTypography-body1 css-8wbrmh-MuiTypography-root"
                >
                  Section Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
